--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+  oioioi
   <body>
     <div id="root"></div>
     <script type="module" src="/main.js"></script>
