--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>xD</title>
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.d5e615c1.js"></script>
+    <link rel="stylesheet" href="/assets/index.a1be79b6.css">
   </head>
-  oioioi
   <body>
     <div id="root"></div>
-    <script type="module" src="/main.js"></script>
+    
   </body>
 </html>
